fix(chip): add overflow to support font icons
Closes #1432

--- a/packages/chip/src/_mixins.scss
+++ b/packages/chip/src/_mixins.scss
@@ -170,6 +170,7 @@
     @include rmd-transition(standard);
 
     max-width: 0;
+    overflow: hidden;
     transition: max-width $rmd-transition-standard-time;
 
     &--visible {
